update languages
ft(src):update language

ft(src):reset password
