# swagger.json
@@ -11,7 +11,6 @@
       "name": "localhost"
     }
   ],
-  "schemes": ["http", "https"],
   "paths": {
     "/": {
       "get": {
@@ -30,6 +29,15 @@
         "tags": ["Users"],
         "summary": "Get all users",
         "description": "Get all users",
+        "parameters": [
+          {
+            "in": "header",
+            "name": "Authorization",
+            "required": true,
+            "type": "string",
+            "description": "token"
+          }
+        ],
         "responses": {
           "200": {
             "description": "Users!"
@@ -48,7 +56,7 @@
             "in": "body",
             "name": "body",
             "schema": {
-              "$ref": "#/definitions/user"
+              "$ref": "#/components/schemas/user"
             }
           }
         ],
@@ -83,7 +91,7 @@
             "in": "body",
             "name": "body",
             "schema": {
-              "$ref": "#/definitions/user"
+              "$ref": "#/components/schemas/userLogin"
             }
           }
         ],
@@ -112,34 +120,145 @@
         "tags": ["Users"],
         "summary": "Logout User",
         "description": "Logout User",
+        "parameters": [
+          {
+            "in": "header",
+            "name": "Authorization",
+            "required": true,
+            "type": "string",
+            "description": "token"
+          }
+        ],
         "responses": {
           "200": {
             "description": "Users Found"
           }
         }
       }
+    },
+    "/api/v1/users/forgotPassword": {
+      "post": {
+        "tags": ["Users"],
+        "summary": "Forgort Password",
+        "description": "Help user to reset password",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Enter your email",
+            "schema": {
+              "$ref": "#/components/schemas/forgotPassword"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User Found"
+          }
+        }
+      }
+    },
+    "/api/v1/users/resetPassword/{token}": {
+      "patch": {
+        "tags": ["Users"],
+        "summary": "Reset Password",
+        "description": "Help user to reset password",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "token"
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Enter password and passwordConfirm",
+            "schema": {
+              "$ref": "#/components/schemas/resetPassword"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User Found"
+          }
+        }
+      }
+    },
+    "/api/v1/users/profile": {
+      "patch": {
+        "tags": ["Users"],
+        "summary": "update profile",
+        "description": "Help user to update profile",
+        "parameters": [
+          {
+            "in": "header",
+            "name": "Authorization",
+            "required": true,
+            "type": "string",
+            "description": "token"
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Enter updated information",
+            "schema": {
+              "$ref": "#/components/schemas/user"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User Found"
+          }
+        }
+      }
     }
   },
-  "user": {
-      "properties": {
+  "components": {
+    "schemas": {
+      "user": {
+        "properties": {
           "name": {
-              "type": "string"
+            "type": "string"
           },
           "phone": {
-              "type": "string"
+            "type": "string"
           },
           "email": {
-              "type": "string"
+            "type": "string"
           },
           "role": {
-              "type": "string"
+            "type": "string"
           },
           "gender": {
-              "type": "string"
+            "type": "string"
           },
           "birthdate": {
-              "type": "date"
+            "type": "date"
           }
+        }
+      },
+      "userLogin": {
+        "email": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
+      },
+      "resetPassword": {
+        "password": {
+          "type": "string"
+        },
+        "passwordConfirm": {
+          "type": "string"
+        }
+      },
+      "forgotPassword": {
+        "email": {
+          "type": "string"
+        }
       }
+    }
   }
 }
